fixed issues on smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -845,6 +845,12 @@ h5 {
   }
 }
 
+@media screen and (max-width: 450px) {
+  .section-contagion {
+    padding: 0rem 1rem;
+  }
+}
+
 .contagion-cards-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -906,6 +912,8 @@ h5 {
 @media screen and (max-width: 400px) {
   .contagion-card {
     margin: 3rem 1rem 2rem 1rem;
+    width: 80%;
+    height: 25rem;
   }
 }
 
@@ -919,8 +927,8 @@ h5 {
 
 @media screen and (max-width: 400px) {
   .contagion-card__img {
-    -webkit-transform: translateX(-10rem) scale(1.4);
-            transform: translateX(-10rem) scale(1.4);
+    -webkit-transform: translateX(-5rem) scale(1.4);
+            transform: translateX(-5rem) scale(1.4);
   }
 }
 
@@ -933,8 +941,8 @@ h5 {
 
 @media screen and (max-width: 400px) {
   .contagion-card:hover .contagion-card__img {
-    -webkit-transform: translateX(-15rem) scale(1);
-            transform: translateX(-15rem) scale(1);
+    -webkit-transform: translateX(-5rem) scale(1);
+            transform: translateX(-5rem) scale(1);
   }
 }
 
@@ -1234,6 +1242,12 @@ h5 {
   margin: 10rem auto 1rem auto;
 }
 
+@media screen and (max-width: 500px) {
+  .hrule {
+    margin-top: 4rem;
+  }
+}
+
 .section-stats {
   padding: 25rem 5rem 5rem 5rem;
   margin-top: -26vh;
@@ -1244,6 +1258,12 @@ h5 {
 @media screen and (max-width: 830px) {
   .section-stats {
     padding: 20rem 5rem 0 5rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .section-stats {
+    padding: 18rem 1rem 0 1rem;
   }
 }
 
@@ -1318,6 +1338,13 @@ h5 {
     max-width: 20rem;
     height: 24rem;
     margin: 2rem 1rem 2rem 1rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .stats-cards__cards {
+    max-width: 15rem;
+    height: 20rem;
   }
 }
 
@@ -1418,6 +1445,12 @@ h5 {
   font-size: 2.5rem;
 }
 
+@media screen and (max-width: 450px) {
+  .card-data {
+    font-size: 2rem;
+  }
+}
+
 .card-data-new {
   margin-top: 1rem;
   font-size: 1.2rem;
@@ -1492,6 +1525,13 @@ h5 {
 
 .heading-ror {
   color: #28a745;
+}
+
+@media screen and (max-width: 450px) {
+  .heading-ror {
+    font-size: 1rem;
+    margin-bottom: .5rem;
+  }
 }
 
 .section-symptoms {
